--- a/blog-front/index.html
+++ b/blog-front/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div id="app">
+      <div class="bg"></div>
+      <fullscreen></fullscreen>
       <router-view></router-view>
     </div>
     <!-- built files will be auto injected -->
