--- a/blog-front/index.html
+++ b/blog-front/index.html
@@ -8,10 +8,12 @@
   </head>
   <body>
     <div id="app">
-      <div class="bg"></div>
-      <fullscreen></fullscreen>
+      <background></background>
       <router-view></router-view>
     </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
+<script>
+
+</script>
